# game_kill_errors

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  main-e089a66ccc3ec04.css  release.toml  wasm_kill_errors-14681e725475748.js  wasm_kill_errors-19dadc4e67bdd2c8.js  wasm_kill_errors-2e5c52bd7718023e.js  wasm_kill_errors-304e977f991297ca.js  wasm_kill_errors-4c53aff6225b3608.js  wasm_kill_errors-4ef2a4a4db99d143.js  wasm_kill_errors-4f9acf2a760a939a.js  wasm_kill_errors-5cf47a422e1d236d.js  wasm_kill_errors-603189beeba4c996.js  wasm_kill_errors-751cc2b02d131726.js  wasm_kill_errors-766a1a1c9104e42b.js  wasm_kill_errors-78f2d1f7abb01953.js  wasm_kill_errors-7a0278ec14015a8a.js  wasm_kill_errors-8753fe170cfcb978.js  wasm_kill_errors-9a1708e4b8eabe84.js  wasm_kill_errors-b467b36dcaea5bfa.js  wasm_kill_errors-c9ed4c27fd345097.js  wasm_kill_errors-cfe39b6ca3e106fa.js  wasm_kill_errors-d1ec684717cfbc30.js  wasm_kill_errors-d48e8d016850fedd.js  wasm_kill_errors-ed32d1dca4e37bbb.js
.github/workflows/: build-android.yml  build.yml  ci.yml  itch.yml  release-gh-pages.yml  release-itch-html.yml
assets/animated_3d/: crab.glb  spider.glb
launchers/mobile/: Cargo.toml
launchers/mobile/android/: AndroidManifest.xml  build.gradle  config.gradle  gradle.properties  version.properties
launchers/mobile/android/src/com/sergioribera/kill_errors/: MainActivity.kt
launchers/mobile/src/: lib.rs
launchers/native/: Cargo.toml  Makefile.toml
launchers/native/src/: main.rs
launchers/wasm/: Cargo.toml  Makefile.toml  index.html
launchers/wasm/src/: main.rs
src/: effects.rs  game.rs  lens.rs  lib.rs  ui.rs
src/game/: components.rs  systems.rs
src/locale/: asset.rs
