[package]
name = "game"
version = "0.3.14"
edition = "2021"

[workspace]
resolver = "2"
members = ["launchers/wasm", "launchers/native", "launchers/mobile"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[workspace.dependencies]
log = "0.4.18"
bevy = { version = "0.10.1", default-features = false, features = [
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_audio",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
    "x11",
    "zstd",
    "wav",
] }

[features]
default = []
inspect = [
    "bevy/dynamic_linking",
    "bevy-inspector-egui",
    "bevy_mod_picking/debug",
]

[dependencies]
bevy.workspace = true
log.workspace = true
rand = "0.8"
lazy_static = "1.4.0"
bevy_sprite3d = "2.4.0"
bevy-inspector-egui = { version = "0.18.3", optional = true }
bevy_mod_picking = { version = "0.13.0", default-features = false, features = [
    "selection",
    "backend_raycast",
] }
bevy_tweening = { version = "0.7.0", default-features = false, features = [
    "bevy_text",
] }

[patch.crates-io]
android-activity = { git = "https://github.com/rust-mobile/android-activity", rev = "79e03e08fbf70e374cb88d8ef8c89acaa006bbfc" }
bevy_ui = { git = "https://github.com/bevyengine/bevy", rev = "ffc62c1a81bc2d4a50e61c3f5919bc3424305234" }
bevy_text = { git = "https://github.com/bevyengine/bevy", rev = "ffc62c1a81bc2d4a50e61c3f5919bc3424305234" }
bevy_tweening = { git = "https://github.com/sibsibsib/bevy_tweening", branch = "mirrored_repeat_fix" }
