[package]
name = "game"
version = "0.4.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["launchers/wasm", "launchers/native", "launchers/mobile"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[workspace.dependencies]
log = "0.4.19"
bevy = { version = "0.11", default-features = false, features = [
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_audio",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "png",
    "x11",
    "zstd",
    "wav",
] }

[features]
default = []
inspect = ["bevy-inspector-egui"]

[target.'cfg(not(target_family = "wasm"))'.features]
inspect = ["bevy/dynamic_linking", "bevy-inspector-egui"]

[dependencies]
bevy.workspace = true
log.workspace = true
rand = "0.8"
lazy_static = "1.4.0"
bevy_sprite3d = "2.5.0"
bevy_eventlistener = { git = "https://github.com/aevyrie/bevy_eventlistener.git", rev = "4d8de4c" }
bevy-inspector-egui = { version = "0.19", optional = true }
# TODO: update to 0.15 when update to bevy 0.11
bevy_mod_picking = { version = "0.14.0", default-features = false, features = [
    "selection",
    "backend_raycast",
] }
bevy_tweening = { version = "0.8.0", default-features = false, features = [
    "bevy_text",
] }

[patch.crates-io]
bevy_tweening = { git = "https://github.com/SergioRibera/bevy_tweening", branch = "infinite_mirrored" }
bevy_mod_picking = { git = "https://github.com/bardt/bevy_mod_picking", branch = "bevy_0.11" }
